--- a/content/themes/puurnatal/sass/theme/_puur.scss
+++ b/content/themes/puurnatal/sass/theme/_puur.scss
@@ -107,6 +107,7 @@ body #wrapper {
 
 .width-100 .puur-fullwidth.parallax-img {
     margin-bottom: 0;
+    position: relative;
 }
 
 .tfs-slider.flexslider {
