Added styling 2/5 and 3/5 width

--- a/content/themes/puurnatal/assets/css/main.css
+++ b/content/themes/puurnatal/assets/css/main.css
@@ -22906,7 +22906,11 @@ body #wrapper {
 .page .puur_builder_column_2_3 .puur-column-wrapper,
 .post .puur_builder_column_2_3 .puur-column-wrapper,
 .blog .puur_builder_column_2_3 .puur-column-wrapper,
-.single .puur_builder_column_2_3 .puur-column-wrapper {
+.single .puur_builder_column_2_3 .puur-column-wrapper,
+.page .puur_builder_column_3_5 .puur-column-wrapper,
+.post .puur_builder_column_3_5 .puur-column-wrapper,
+.blog .puur_builder_column_3_5 .puur-column-wrapper,
+.single .puur_builder_column_3_5 .puur-column-wrapper {
   padding: 80px 100px 100px 100px;
   height: auto;
   visibility: visible;
@@ -22914,13 +22918,21 @@ body #wrapper {
   .page .puur_builder_column_2_3 .puur-column-wrapper h1,
   .post .puur_builder_column_2_3 .puur-column-wrapper h1,
   .blog .puur_builder_column_2_3 .puur-column-wrapper h1,
-  .single .puur_builder_column_2_3 .puur-column-wrapper h1 {
+  .single .puur_builder_column_2_3 .puur-column-wrapper h1,
+  .page .puur_builder_column_3_5 .puur-column-wrapper h1,
+  .post .puur_builder_column_3_5 .puur-column-wrapper h1,
+  .blog .puur_builder_column_3_5 .puur-column-wrapper h1,
+  .single .puur_builder_column_3_5 .puur-column-wrapper h1 {
     font-size: 40px;
     color: #d36e70 !important; }
   .page .puur_builder_column_2_3 .puur-column-wrapper h2,
   .post .puur_builder_column_2_3 .puur-column-wrapper h2,
   .blog .puur_builder_column_2_3 .puur-column-wrapper h2,
-  .single .puur_builder_column_2_3 .puur-column-wrapper h2 {
+  .single .puur_builder_column_2_3 .puur-column-wrapper h2,
+  .page .puur_builder_column_3_5 .puur-column-wrapper h2,
+  .post .puur_builder_column_3_5 .puur-column-wrapper h2,
+  .blog .puur_builder_column_3_5 .puur-column-wrapper h2,
+  .single .puur_builder_column_3_5 .puur-column-wrapper h2 {
     color: #d36e70 !important; }
 
 .page .puur-separator.sep-single.sep-solid.hrleft,
@@ -22938,7 +22950,11 @@ body #wrapper {
 .page .puur_builder_column_1_3 .puur-column-wrapper,
 .post .puur_builder_column_1_3 .puur-column-wrapper,
 .blog .puur_builder_column_1_3 .puur-column-wrapper,
-.single .puur_builder_column_1_3 .puur-column-wrapper {
+.single .puur_builder_column_1_3 .puur-column-wrapper,
+.page .puur_builder_column_2_5 .puur-column-wrapper,
+.post .puur_builder_column_2_5 .puur-column-wrapper,
+.blog .puur_builder_column_2_5 .puur-column-wrapper,
+.single .puur_builder_column_2_5 .puur-column-wrapper {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -23049,7 +23065,8 @@ body #wrapper {
   left: 0; }
 
 /* Links */
-.links .puur_builder_column_2_3 .puur-column-wrapper {
+.links .puur_builder_column_2_3 .puur-column-wrapper,
+.links .puur_builder_column_3_5 .puur-column-wrapper {
   padding-top: 5%;
   padding-right: 10%;
   padding-bottom: 5%;
@@ -23109,7 +23126,8 @@ body #wrapper {
 .search-results h2 a {
   color: #d36e70; }
 
-.search-results .puur_builder_column_2_3 .puur-column-wrapper {
+.search-results .puur_builder_column_2_3 .puur-column-wrapper,
+.search-results .puur_builder_column_3_5 .puur-column-wrapper {
   padding: 5% 10%; }
 
 .slide-content {
@@ -23177,7 +23195,8 @@ body #wrapper {
     left: 0; }
   .home .puur-layout-column.puur-one-third {
     width: 100%; }
-  .page .puur_builder_column_1_3 .puur-column-wrapper, .post .puur_builder_column_1_3 .puur-column-wrapper {
+  .page .puur_builder_column_1_3 .puur-column-wrapper, .post .puur_builder_column_1_3 .puur-column-wrapper,
+  .page .puur_builder_column_2_5 .puur-column-wrapper, .post .puur_builder_column_2_5 .puur-column-wrapper {
     max-height: 250px; }
   .puur-layout-column {
     height: auto !important; }
